<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:layout_marginBottom="16dp"/>
        <TextView
            style="@style/HeaderFont"
            android:text="@string/text_toppings"/>

        <CheckBox
            android:id="@+id/whippedCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_whipped"
            android:textSize="16sp"
            android:paddingLeft="24dp"/>

        <CheckBox
            android:id="@+id/chocolateCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_chocolate"
            android:textSize="16sp"
            android:paddingLeft="24dp"/>

        <TextView
            style="@style/HeaderFont"
            android:text="@string/text_quantity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="1"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/butt_order"/>
    </LinearLayout>
</ScrollView>
